--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build"
+    "build:prod": "ng build --configuration production --base-href '/Service-Worker-Tarea/'"
   },
   "dependencies": {
     "@angular/animations": "^20.0.0",
@@ -20,9 +20,11 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.1.0",
     "@angular/build": "^20.0.0",
     "@angular/cli": "^20.0.0",
     "@angular/compiler-cli": "^20.0.0",
+    "angular-cli-ghpages": "^2.0.3",
     "typescript": "^5.8.2"
   }
 }
